--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,14 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Sumeet Jain
-blurb: Not Engineer @ Google ¯\_(ツ)_/¯
-email: your-email@domain.com
+title: Ben Nourse
+blurb: OCS Student
+email: bnourse@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-repository: github-username/github-username.github.com
+repository: bnourse/bnourse.github.io
 
 # Build settings - DO NOT EDIT, UNLESS YOU KNOW WHAT YOU'RE DOING.
 markdown: kramdown
