--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,12 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Ben Nourse
-blurb: OCS Student
-email: bnourse@gmail.com
+blurb: Web Developer
+email: ben@bennourse.com
+twitter: https://twitter.com/benourse
+github: https://github.com/bnourse
+linkedin: https://www.linkedin.com/in/ben-nourse-74080a13b/
+rss: "#"
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
