--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ email: ben@bennourse.com
 twitter: https://twitter.com/benourse
 github: https://github.com/bnourse
 linkedin: https://www.linkedin.com/in/ben-nourse-74080a13b/
-rss: "#"
+rss: /feed
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
